--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             </p>
             <img class="large-img" src="./img/item4-big.svg" alt="Discord" />
             <h3 class="star-title">Pronto a iniziare la tua avventura?</h3>
+            <a class="btn btn-big btn-blu" href="#">Scarica per Mac</a>
           </div>
         </div>
       </section>
