--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discord</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -135,19 +142,126 @@
     <footer class="page-footer">
       <div class="container">
         <div class="row footer-top">
-          <div class="col-30"></div>
+          <div class="col-30">
+            <h3>Il tuo posto per parlare</h3>
+            <div class="footer-top">
+              <img src="./img/ita.png" alt="bandiera italia" />
+              <span>italiano</span>
+            </div>
+            <div class="icon">
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-square-facebook"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
           <div class="col-70">
             <div class="row">
-              <div class="col-25"></div>
-              <div class="col-25"></div>
-              <div class="col-25"></div>
-              <div class="col-25"></div>
+              <div class="col-25">
+                <h4>Prodotto</h4>
+                <ul class="menu-links">
+                  <li>
+                    <a href="#">Scarica</a>
+                  </li>
+                  <li>
+                    <a href="#">Perche Discord</a>
+                  </li>
+                  <li>
+                    <a href="#">Nitro</a>
+                  </li>
+                  <li>
+                    <a href="#">Sicurezza</a>
+                  </li>
+                  <li>
+                    <a href="#">Assistenza</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-25">
+                <h4>Compagnia</h4>
+                <ul class="menu-links">
+                  <li>
+                    <a href="#">Chi siamo</a>
+                  </li>
+                  <li>
+                    <a href="#">Lavora con noi</a>
+                  </li>
+                  <li>
+                    <a href="#">marchio</a>
+                  </li>
+                  <li>
+                    <a href="#">Redazione</a>
+                  </li>
+                  <li>
+                    <a href="#">Negozio</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-25">
+                <h4>Risorse</h4>
+                <ul class="menu-links">
+                  <li>
+                    <a href="#">Scarica</a>
+                  </li>
+                  <li>
+                    <a href="#">Perche Discord</a>
+                  </li>
+                  <li>
+                    <a href="#">Nitro</a>
+                  </li>
+                  <li>
+                    <a href="#">Sicurezza</a>
+                  </li>
+                  <li>
+                    <a href="#">Assistenza</a>
+                  </li>
+                  <li>
+                    <a href="#">Scarica</a>
+                  </li>
+                  <li>
+                    <a href="#">Perche Discord</a>
+                  </li>
+                  <li>
+                    <a href="#">Nitro</a>
+                  </li>
+                  <li>
+                    <a href="#">Sicurezza</a>
+                  </li>
+                  <li>
+                    <a href="#">Assistenza</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-25">
+                <h4>Norme</h4>
+                <ul class="menu-links">
+                  <li>
+                    <a href="#">Scarica</a>
+                  </li>
+                  <li>
+                    <a href="#">Perche Discord</a>
+                  </li>
+                  <li>
+                    <a href="#">Nitro</a>
+                  </li>
+                  <li>
+                    <a href="#">Sicurezza</a>
+                  </li>
+                  <li>
+                    <a href="#">Assistenza</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
         <div class="row footer-bottom">
-          <div>Logo</div>
-          <div>Bottone</div>
+          <div>
+            <img src="./img/logo.svg" alt="logo discord" />
+          </div>
+          <div class="registrati">
+            <a class="btn btn-small btn-blu" href="#">Registrati</a>
+          </div>
         </div>
       </div>
     </footer>
